--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -76,16 +76,17 @@
                         (show ? 'scale-100 opacity-100' : 'scale-50 opacity-0')
                       " (pointerdown)="onDragStart($event)" />
 
-                        <button mat-flat-button class="absolute left-3 md:left-6 top-1/2 -translate-y-1/2
-                       rounded-full  bg-white/20 hover:bg-white/30 text-white backdrop-blur
-                       focus:outline-none" (click)="prev($event)">
-                            <mat-icon class="icon-size-5" [svgIcon]="'heroicons_outline:arrow-left'"></mat-icon>
+                        <button mat-icon-button type="button" (click)="prev($event)" class="absolute left-3 md:left-6 top-1/2 -translate-y-1/2
+         p-2 md:p-3 rounded-full bg-white text-black
+         hover:bg-gray-100 focus:outline-none shadow-md transition-colors duration-200">
+                            <mat-icon class="text-black w-5 h-5" [svgIcon]="'heroicons_outline:arrow-left'">
+                            </mat-icon>
                         </button>
 
-                        <button mat-flat-button class="absolute right-3 md:right-6 top-1/2 -translate-y-1/2
-                       rounded-full  bg-white/20 hover:bg-white/30 text-white backdrop-blur
-                       focus:outline-none" (click)="next($event)">
-                            <mat-icon class="icon-size-5" [svgIcon]="'heroicons_outline:arrow-right'"></mat-icon>
+                        <button mat-icon-button class="absolute right-3 md:right-6 top-1/2 -translate-y-1/2
+                       rounded-full  bg-white text-black" (click)="next($event)">
+                            <mat-icon class="icon-size-5 text-black"
+                                [svgIcon]="'heroicons_outline:arrow-right'"></mat-icon>
                         </button>
                         <button mat-flat-button class="absolute top-3 right-3 md:top-6 md:right-6
                        rounded-full bg-white/20 hover:bg-white/30 text-white backdrop-blur
@@ -124,13 +125,15 @@
     </div>
     <div *ngIf="!isOpen" class="sticky bottom-4 w-full z-50">
         <div class="relative flex justify-end pr-4">
-            <div
-                class="absolute bottom-16 right-0 whitespace-pre-line bg-gray-200 text-black font-semibold text-md px-3 py-1 rounded shadow animate-bounce text-center z-10">
-                ¡Arma tu <br>viaje ahora!
-            </div>
 
             <button (click)="abrirModal()" aria-label="Enviar WhatsApp">
-                <img class="w-15 h-15 mb-1 bg-white rounded-2xl" src="assets/images/logos/trotapie-iso.png" />
+                <div class="absolute bottom-16 right-0 whitespace-pre-line flex justify-center items-center 
+         bg-white text-black font-semibold text-md px-3 py-1 
+         rounded-t-2xl shadow animate-bounce text-center z-10">
+                    <mat-icon svgIcon="mat_outline:headphones" class="mr-1"></mat-icon>
+                    Contacto
+                </div>
+                <img class="w-16 h-16 p-2 bg-white rounded-full" src="assets/images/logos/trotapie-iso.png" />
             </button>
         </div>
     </div>
@@ -261,9 +264,9 @@
 </div>
 
 <div *ngIf="modalAbierto" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 px-6">
-    <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full relative max-h-[80vh] overflow-y-auto"
+    <div class="bg-black p-6 rounded-lg shadow-lg max-w-md w-full relative max-h-[80vh] overflow-y-auto"
         style="box-sizing: border-box;">
-        <button (click)="cerrarModal()" class="absolute top-2 right-3 text-gray-500 hover:text-red-600 text-3xl">
+        <button (click)="cerrarModal()" class="absolute top-2 right-3 text-black-500 hover:text-red-600 text-3xl">
             &times;
         </button>
 
@@ -363,17 +366,17 @@
 
             <div *ngIf="!form">
                 <div>
-                    <div class="flex justify-center mt-18 mb-8">
+                    <div class="flex justify-center mt-[15%] mb-8">
                         <img class="w-56 h-15 " src="assets/images/logos/trotapie.png" alt="Logo Trotapie" />
                     </div>
-                    <div class="ml-13">
+                    <div class="mx-8">
                         <div class="flex items-center mb-4">
                             <img class="w-8 h-8 mr-2" src="assets/icons/cama-hotel.svg" />
-                            <span><b>+100 mil</b> hoteles</span>
+                            <span><b>+100 mil</b> hoteles en todo el mundo</span>
                         </div>
                         <div class="flex items-center mb-4">
                             <img class="w-8 h-8 mr-2" src="assets/icons/avion3.svg" />
-                            <span><b>Vuelos</b></span>
+                            <span><b>Vuelos</b> nacionales e internacionales</span>
                         </div>
                         <div class="flex items-center mb-4">
                             <mat-icon svgIcon="heroicons_outline:banknotes" class="w-8 h-8 mr-2 text-black"></mat-icon>
@@ -382,22 +385,23 @@
                         <div class="flex items-center mb-4">
                             <mat-icon svgIcon="heroicons_outline:credit-card"
                                 class="w-8 h-8 mr-2 text-black"></mat-icon>
-                            <span><b>Meses sin intereses</b></span>
+                            <span><b>Hasta 18 meses sin intereses</b></span>
                         </div>
                         <div class="flex items-center mb-4">
                             <img class="w-8 h-8 mr-2" src="assets/icons/support.svg" />
-                            <span><b>Atención</b></span>
+                            <span><b>Atención</b> 10:00 a 21:00 hrs</span>
                         </div>
                         <div class="flex items-center">
                             <img class="w-8 h-8 mr-2" src="assets/icons/tips.svg" />
-                            <span>Anticipo <b>mínimo</b>, confirmación <b>segura</b></span>
+                            <span>Anticipo <b>mínimo</b> para reservar, confirmación <b>segura</b></span>
                         </div>
                     </div>
                 </div>
 
                 <div class="absolute left-0 right-0 bottom-4 px-6">
-                    <button mat-flat-button color="primary" class="w-full text-white" (click)="abrirForm()">
-                        <div class="flex items-center">
+                    <button mat-flat-button color="primary" class="w-full text-white animate-pulse-slow shadow-lg"
+                        (click)="abrirForm()">
+                        <div class="flex items-center justify-center">
                             <img class="w-6 h-6 mr-2" src="assets/icons/concerge.svg" />
                             ¡Quiero viajar!
                         </div>
@@ -406,9 +410,18 @@
             </div>
             <div *ngIf="form" class="grid grid-rows-[auto,1fr,auto] h-full overscroll-contain touch-pan-y">
 
-                <div class="px-4 pt-6 pb-3 border-b bg-white/90 dark:bg-gray-900/90 backdrop-blur sticky top-0">
-                    <h2 class="text-2xl font-bold text-green-800">Solicitar cotización</h2>
-                    <button class="absolute top-7 right-4 text-gray-600 dark:text-gray-300" (click)="cerrarModal()">
+                <div class="px-4 pt-6 pb-3 border-b bg-black text-white sticky top-0 backdrop-blur rounded-t-md">
+                    <div class="flex items-center space-x-3">
+                        <img class="w-12 h-12 p-2 bg-white rounded-full" src="assets/images/logos/trotapie-iso.png"
+                            alt="Logo" />
+
+                        <div class="flex flex-col leading-tight">
+                            <span class="text-2xl font-semibold">Asistente virtual</span>
+                            <span class="text-md text-white">{{ hotel.nombre }}</span>
+                        </div>
+                    </div>
+                    <button class="absolute top-7 right-4 text-gray-300 hover:text-white transition"
+                        (click)="cerrarModal()">
                         <mat-icon svgIcon="heroicons_outline:x-mark" class="w-8 h-8"></mat-icon>
                     </button>
                 </div>
