--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -42,8 +42,8 @@
                 </button>
             </div>
             <div class="mt-10">
-                <div class="text-2xl my-4 font-semibold italic leading-tight text-center">
-                    Galeria
+                <div class="text-2xl my-4 font-semibold leading-tight text-center">
+                    Ver galeria
                 </div>
                 <!-- @if(isScreenSmall){
                 <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 gap-4 p-2">
