--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -1,9 +1,9 @@
-<div #scrollContainer class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
+<div *ngIf="hotel" #scrollContainer class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
     <div class="flex min-w-0 flex-auto flex-col m-6">
         <div class="sticky top-0 z-50 flex items-center justify-between w-full py-2 px-2 md:px-4 transition-all duration-300 backdrop-blur-md"
             [ngClass]="{'bg-transparent': !scrolled, 'bg-white dark:bg-gray-900 shadow-md': scrolled }">
             <div class="text-3xl font-semibold leading-tight">
-                {{hotel.nombre}}
+                {{hotel.nombre_hotel}}
             </div>
             <div class="flex justify-end mt-4 mb-2 ml-2">
                 <button mat-flat-button color="warn" class="mr-2" (click)="regresar()">
@@ -340,7 +340,7 @@
     </div>
 </div>
 
-<div *ngIf="mostrarMapa" class="fixed inset-0 z-[999] bg-black/50 backdrop-blur-sm flex items-end justify-center">
+<div *ngIf="mostrarMapa" [ubicacion]="hotel.ubicacion" class="fixed inset-0 z-[999] bg-black/50 backdrop-blur-sm flex items-end justify-center">
     <div
         class="bg-white dark:bg-gray-900 w-4/5 max-h-[75%] rounded-t-2xl shadow-xl p-4 overflow-hidden animate-slide-up relative">
 
@@ -471,7 +471,7 @@
 
                             <mat-menu #roomsMenu="matMenu" hasBackdrop="true" [overlapTrigger]="false"
                                 class="!p-2 min-w-[340px] flex items-center">
-                                <div class="flex flex-col gap-3 p-2" (click)="$event.stopPropagation()">
+                                <div class="flex flex-col gap-3 p-2 max-h-96 overflow-y-auto" (click)="$event.stopPropagation()">
                                     <ng-container *ngFor="let r of rooms(); let i = index">
                                         <div class="rounded-xl border p-3 flex flex-col gap-3">
                                             <div class="flex items-center justify-between">
@@ -558,7 +558,7 @@
                                 <label class="block text-sm font-medium text-green-700 mb-1">Asesor</label>
                                 <select formControlName="asesor" class="select-underline">
                                     <option [ngValue]="null" disabled>Selecciona una opción</option>
-                                    <option *ngFor="let op of opcionesRegimen" [ngValue]="op">{{ op }}</option>
+                                    <option *ngFor="let op of asesores" [ngValue]="op">{{ op.nombre }}</option>
                                 </select>
                             </div>
 
@@ -566,7 +566,7 @@
                                 <label class="block text-sm font-medium text-green-700 mb-1">Régimen</label>
                                 <select formControlName="regimen" class="select-underline">
                                     <option [ngValue]="null" disabled>Selecciona una opción</option>
-                                    <option *ngFor="let op of opcionesRegimen" [ngValue]="op">{{ op }}</option>
+                                    <option *ngFor="let op of opcionesRegimen" [ngValue]="op.regimen.descripcion">{{ op.regimen.descripcion }}</option>
                                 </select>
 
                                 <p *ngIf="reservacionForm.get('regimen')?.invalid && (reservacionForm.get('regimen')?.touched || reservacionForm.get('regimen')?.dirty)"
@@ -582,17 +582,18 @@
                             <input formControlName="nombre" class="input-underline" />
                         </div>
 
+                        <!-- TELÉFONO -->
+                        <div>
+                            <label class="block text-sm font-medium text-green-700 mb-1">Teléfono</label>
+                            <input formControlName="telefono" class="input-underline" />
+                        </div>
+
                         <!-- EMAIL -->
                         <div>
                             <label class="block text-sm font-medium text-green-700 mb-1">Email</label>
                             <input formControlName="correo" class="input-underline" />
                         </div>
 
-                        <!-- TELÉFONO -->
-                        <div>
-                            <label class="block text-sm font-medium text-green-700 mb-1">Teléfono</label>
-                            <input formControlName="telefono" class="input-underline" />
-                        </div>
 
                         <!-- CHECKBOX ofertas  -->
                         <div class="pt-1">
