--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -4,7 +4,7 @@
             <section #anclaNacionales class="relative">
                 <div class="sticky top-0 z-30 bg-green-50 shadow py-2 transition duration-300">
                     <h2 class="text-center text-green-800 font-bold text-2xl">Destinos Nacionales</h2>
-                    <div class="flex flex-col gap-2">
+                    <!-- <div class="flex flex-col gap-2">
 
                         <form [formGroup]="hotelesForm">
                             <div class="flex flex-col gap-2">
@@ -43,10 +43,40 @@
                             </div>
                         </form>
 
+                    </div> -->
+
+                    <div class="flex flex-col gap-4 items-center w-full">
+                        <form [formGroup]="hotelesForm" class="w-full max-w-4xl">
+
+                            <div class="w-full">
+                                <div class="flex flex-wrap justify-center gap-2 sm:gap-4 pb-2">
+                                    <label *ngFor="let destino of destinos" class="cursor-pointer">
+                                        <input type="radio" [id]="'destino-' + destino.id" [value]="destino.nombre"
+                                            formControlName="hotelSeleccionado" class="sr-only peer" />
+                                        <div
+                                            class="px-4 py-2 text-md font-medium text-gray-600 border-b-2 border-transparent peer-checked:border-[#1B6F56] peer-checked:text-[#1B6F56] hover:text-[#1B6F56] transition duration-200">
+                                            {{ destino.nombre }}
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="flex justify-center ">
+                                <button mat-flat-button type="button" color="accent"
+                                    class="flex items-center gap-2 bg-black text-white px-4 py-2 rounded-full hover:bg-gray-700 transition duration-200"
+                                    (click)="irA()">
+                                    <div class="flex items-center">
+                                        <img class="w-6 h-6 mr-2" src="assets/icons/destinos-internacionales.svg" />
+                                        Destinos internacionales
+                                    </div>
+                                </button>
+                            </div>
+                        </form>
                     </div>
-                    <app-floating-search class=" z-[70]" [data]="listaHoteles" [debounceMs]="150"
+
+                    <!-- <app-floating-search class=" z-[70]" [data]="listaHoteles" [debounceMs]="150"
                         (filtered)="onHotelesFiltrados($event)">
-                    </app-floating-search>
+                    </app-floating-search> -->
 
                 </div>
 
@@ -66,7 +96,7 @@
                                     (click)="verDetalleHotel(hotel)">
 
                                     <div class="absolute inset-0 bg-black/40 z-0"></div>
-                                    <div *ngIf="hotel?.descripcion?.descuento" class="absolute top-2 right-2 z-20">
+                                    <div *ngIf="hotel?.descuento" class="absolute top-2 right-2 z-20">
                                         <div [ngClass]="getDescuentoClass(hotel)" class="text-xs font-bold px-2 py-1">
                                             <div class="flex items-center">
                                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -77,45 +107,49 @@
                                                         d="M6 6h.008v.008H6V6Z" />
                                                 </svg>
 
-                                                {{ hotel?.descripcion?.descuento }}% descuento
+                                                {{ hotel?.descuento.tipo_descuento }}% descuento
                                             </div>
                                         </div>
                                     </div>
-                                    <div *ngIf="hotel?.descripcion?.concepto" class="absolute top-2 left-2 z-20">
+                                    <div *ngIf="hotel?.concepto" class="absolute top-2 left-2 z-20">
                                         <div class="text-xs font-bold px-2 py-1">
                                             <div class="flex items-center">
-                                                <img class="w-6 h-6 mr-2" *ngIf="hotel?.descripcion?.concepto === 'Luxury'" src="assets/icons/luxury.svg" />
-                                                <img class="w-6 h-6 mr-2" *ngIf="hotel?.descripcion?.concepto === 'Solo Adultos'" src="assets/icons/solo adultos.png" />
-                                                <img class="w-6 h-6 mr-2" *ngIf="hotel?.descripcion?.concepto === 'Petfriendly'" src="assets/icons/petfriendly.svg" />
+                                                <img class="w-6 h-6 mr-2"
+                                                    *ngIf="hotel?.concepto?.descripcion === 'Luxury'"
+                                                    src="assets/icons/luxury.svg" />
+                                                <img class="w-6 h-6 mr-2"
+                                                    *ngIf="hotel?.concepto?.descripcion === 'Solo Adultos'"
+                                                    src="assets/icons/solo adultos.png" />
+                                                <img class="w-6 h-6 mr-2"
+                                                    *ngIf="hotel?.concepto?.descripcion === 'Petfriendly'"
+                                                    src="assets/icons/petfriendly.svg" />
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="relative z-10 m-8 mb-4">
-                                        <div class="text-2xl font-semibold leading-tight">{{ hotel.nombre }}</div>
+                                        <div class="text-2xl font-semibold leading-tight">{{ hotel.nombre_hotel }}</div>
 
                                         <div class="-ml-1 mt-2 flex items-center leading-none">
                                             <div class="flex items-center">
-                                                <ng-container
-                                                    *ngFor="let _ of getFullStars(hotel?.descripcion?.estrellas)">
+                                                <ng-container *ngFor="let _ of getFullStars(hotel?.estrellas)">
                                                     <mat-icon class="text-yellow-400 icon-size-5"
                                                         [svgIcon]="'mat_outline:star'"></mat-icon>
                                                 </ng-container>
-                                                <ng-container *ngIf="hasHalfStar(hotel?.descripcion?.estrellas)">
+                                                <ng-container *ngIf="hasHalfStar(hotel?.estrellas)">
                                                     <mat-icon class="text-yellow-400 icon-size-5"
                                                         [svgIcon]="'mat_outline:star_half'"></mat-icon>
                                                 </ng-container>
-                                                <ng-container
-                                                    *ngFor="let _ of getEmptyStars(hotel?.descripcion?.estrellas)">
+                                                <ng-container *ngFor="let _ of getEmptyStars(hotel?.estrellas)">
                                                     <mat-icon class="text-yellow-400 icon-size-5"
                                                         [svgIcon]="'mat_outline:star_outline'"></mat-icon>
                                                 </ng-container>
                                             </div>
-                                            <div class="ml-2">{{ hotel?.descripcion?.estrellas }}</div>
+                                            <div class="ml-2">{{ hotel?.estrellas }}</div>
                                         </div>
                                         <div class="w-3/5">
 
-                                            {{hotel?.descripcion?.regimenPrincipal}}
+                                            {{hotel?.regimen?.descripcion}}
                                         </div>
                                     </div>
 
