--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -40,6 +40,10 @@
                     <mat-icon class="icon-size-5" [svgIcon]="'heroicons_outline:map-pin'"></mat-icon>
                     Ubicación
                 </button>
+                <button id="shareBtn" mat-flat-button color="accent" class="ml-2 w-40 text-white" (click)="compartirHotel()">
+                    <mat-icon class="icon-size-5 pr-1" [svgIcon]="'heroicons_outline:share'"></mat-icon>
+                    Compartir hotel
+                </button>
 
 
 
